Fixed text aligning center by MediaCardList

--- a/frontend/src/components/MediaCard/MediaCard.scss
+++ b/frontend/src/components/MediaCard/MediaCard.scss
@@ -14,6 +14,7 @@
     overflow: hidden;
     background-color: black;
     position: relative;
+    text-align: initial;
 
     .overlay {
         position: absolute;
